src/test/resources/public/input/typechecking/pass/pass03.jova
class Tmp {
}
class Cls {

  public int func(int x) {
    return 42;
  }

    public int func(bool x) {
      bool myvar;
      if(true)
          {
            myvar = true;
          }
          else
          {
            myvar = false;
          }

    return 1;
  }

  public Tmp foo(){
    return nix;
  }
}
