src/test/resources/public/input/typechecking/fail/incorrect_operand/fail04.jova
class Test{

}

class Main {

  public int main() {
    int result;
    Test t;
    result = 1;
    t = result;
    return 0;
  }

}